--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run start:react\" \"npm run start:python\"",
     "start:react": "webpack serve --mode development",
-    "start:python": "python your_python_server_file.py",
+    "start:python": "python3 server.py",
     "build": "webpack --mode production"
   },
   "dependencies": {
