--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.2",
     "css-loader": "^6.10.0",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
