Prepare for Heroku deployment

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A weather app",
   "main": "index.js",
+  "engines": {
+    "node": "v18.16.0"
+  },
   "scripts": {
     "dev": "concurrently \"npm run start:react\" \"npm run start:python\"",
     "start:react": "webpack serve --mode development",
