--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
-appscript==1.2.5
-blinker==1.7.0
-click==8.1.7
 Flask==3.0.2
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-itsdangerous==2.1.2
-Jinja2==3.1.3
-lxml==5.1.0
-MarkupSafe==2.1.5
-numpy==1.26.4
-pandas==2.2.1
-python-dateutil==2.9.0.post0
+Flask-Cors==3.0.10
+requests==2.26.0
 python-dotenv==1.0.1
-pytz==2024.1
-six==1.16.0
-SQLAlchemy==2.0.27
-typing_extensions==4.10.0
-tzdata==2024.1
-Werkzeug==3.0.1
